# HyperBotCore

./: .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py  setup.py.bak  test.py
.github/workflows/: pypi_upload.yaml
documents/: en.md  zh.md
documents/en/: actions.md  advanced.md  client.md  configuration.md  events.md  getting-started.md  messages.md
documents/zh/: actions.md  advanced.md  client.md  configuration.md  events.md  getting-started.md  messages.md
hyperot/: __init__.py  common.py  events.py  hyperogger.py  network.py
hyperot/LecAdapters/: Milky.py  OneBot.py
hyperot/LecAdapters/MilkyLib/: Manager.py  translator.py
hyperot/LecAdapters/OneBotLib/: Manager.py
hyperot/adapters/: listener.py
hyperot/utils/: logic.py
src/hyper_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/hyperot/: __init__.py  common.py  configurator.py  events.py  hyperogger.py  network.py  segments.py
src/hyperot/LecAdapters/: Milky.py  OneBot.py
src/hyperot/LecAdapters/MilkyLib/: translator.py
src/hyperot/LecAdapters/OneBotLib/: Manager.py
src/hyperot/adapters/: __init__.py  common.py  listener.py
src/hyperot/utils/: ArkSignHelper.py  __init__.py  apiresponse.py  errors.py  hypetyping.py  typextensions.py
