[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyper-bot"
version = "0.82.4"
description = "稳定高效、易于开发的QQ Bot框架"
authors = [
    { name = "Harcic", email = "harcic@outlook.com" },
]
urls = { repository = "https://github.com/HarcicYang/HypeR_Bot" }
requires-python = ">=3.10"
dependencies = [
    "setuptools",
    "aiohttp~=3.9.5",
    "requests~=2.31.0",
    "httpx~=0.26.0",
    "websockets",
    "Flask~=3.0.0",
    "ucfgr>=0.0.5",
    "PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hyperot*"]
